--- a/todousado.html
+++ b/todousado.html
@@ -931,7 +931,7 @@
         "precio": "$250.000", "vendido": false, "categoria": 3
         }, {
         "desc": "Bandeja de vidrio Pirex grande 34,5x23,5",
-        "precio": "$15.000", "vendido": false, "categoria": 2
+        "precio": "$15.000", "vendido": true, "categoria": 2
         }, {
         "desc": "Estanteria de acero 160x75x35",
         "precio": "$35.000", "vendido": false, "categoria": 3
