--- a/todousado.html
+++ b/todousado.html
@@ -1145,6 +1145,12 @@
         }, {
         "desc": "Juego de Mesa Tren Mejicano en caja de viaje, como nuevo",
         "precio": "$30.000", "vendido": false, "categoria": 0
+        }, {
+        "desc": "Estanteria 2.00 x 1.50 (hay 2, precio por cada una)",
+        "precio": "$100.000", "vendido": false, "categoria": 0
+        }, {
+        "desc": "Rayador de queso a mano importado, unico, excelente calidad",
+        "precio": "$25.000", "vendido": false, "categoria": 0
         }];
       function show(num) {
         item = String(num).padStart(5, '0');
@@ -1227,7 +1233,7 @@
         Lista de productos usados - Pau y Dani
       </h1>
       <p style="font-size: 13px; margin-left: 20px;">
-        Actualizada Version 25 de Febrero 2024
+        Actualizada Version 27 de Febrero 2024
       </p>
       <p>Los productos se reservan solo con transferencia, sino se venden por orden de llegada retirando por el barrio San Andres.</p>
       <p>Revisar periodicamente la lista ya que se borra lo que se vende y se agregan items.</p>
