--- a/todousado.html
+++ b/todousado.html
@@ -880,7 +880,7 @@
         "precio": "$225.000", "vendido": false, "categoria": 3
         }, {
         "desc": "Mesa maciza algarrobo lijada 240x110x75",
-        "precio": "$480.000", "vendido": false, "categoria": 3
+        "precio": "$480.000", "vendido": true, "categoria": 3
         }, {
         "desc": "Espejo con marco de madera laqueada 104x74",
         "precio": "$90.000", "vendido": false, "categoria": 1
@@ -1147,7 +1147,7 @@
         "precio": "$30.000", "vendido": false, "categoria": 0
         }, {
         "desc": "Estanteria 2.00 x 1.50 (hay 2, precio por cada una)",
-        "precio": "$100.000", "vendido": false, "categoria": 0
+        "precio": "$100.000", "vendido": true, "categoria": 0
         }, {
         "desc": "Rayador de queso a mano importado, unico, excelente calidad",
         "precio": "$25.000", "vendido": false, "categoria": 0
