--- a/todousado.html
+++ b/todousado.html
@@ -628,7 +628,7 @@
         "precio": "$45.000", "vendido": true, "categoria": 7
         }, {
         "desc": "Cama Saltarina Grande (4 metros)",
-        "precio": "$190.000", "vendido": false, "categoria": 7
+        "precio": "$190.000", "vendido": true, "categoria": 7
         }, {
         "desc": "Juguetes muñecas Barbies original (precio por muñeca)",
         "precio": "$10.000", "vendido": false, "categoria": 0
@@ -1132,7 +1132,7 @@
         "precio": "$5.000", "vendido": false, "categoria": 4
         }, {
         "desc": "Lavavajillas Drean Dish 12.2 LT de 12 cubiertos blanco impecable",
-        "precio": "$420.000", "vendido": false, "categoria": 2
+        "precio": "$420.000", "vendido": true, "categoria": 2
         }, {
         "desc": "Botella de agua comprimible",
         "precio": "$10.000", "vendido": false, "categoria": 1
@@ -1233,7 +1233,7 @@
         Lista de productos usados - Pau y Dani
       </h1>
       <p style="font-size: 13px; margin-left: 20px;">
-        Actualizada Version 1 de Marzo 2024
+        Actualizada Version 2 de Marzo 2024
       </p>
       <p>Los productos se reservan solo con transferencia, sino se venden por orden de llegada retirando por el barrio San Andres.</p>
       <p>Revisar periodicamente la lista ya que se borra lo que se vende y se agregan items.</p>
