--- a/todousado.html
+++ b/todousado.html
@@ -562,7 +562,7 @@
         "precio": "$38.000", "vendido": true, "categoria": 0
         }, {
         "desc": "Juego de mesa Ticket to Ride Poland (en ingles)",
-        "precio": "$28.000", "vendido": false, "categoria": 0
+        "precio": "$28.000", "vendido": true, "categoria": 0
         }, {
         "desc": "Juego de mesa Ticket to Ride Märklin Alemania (en ingles)",
         "precio": "$28.000", "vendido": true, "categoria": 0
