--- a/boardgames.html
+++ b/boardgames.html
@@ -221,7 +221,7 @@
         "precio": "$5.000", "vendido": false,
         }, {
         "desc": "Juego de mesa Jumanji",
-        "precio": "$8.000", "vendido": false,
+        "precio": "$8.000", "vendido": true,
         }, {
         "desc": "Juego de mesa Pit (original en ingles)",
         "precio": "$21.000", "vendido": true,
@@ -296,7 +296,7 @@
         "precio": "$38.000", "vendido": true,
         }, {
         "desc": "Juego de mesa Ticket to Ride Poland (en ingles)",
-        "precio": "$28.000", "vendido": false,
+        "precio": "$28.000", "vendido": true,
         }, {
         "desc": "Juego de mesa Ticket to Ride Märklin Alemania (en ingles)",
         "precio": "$28.000", "vendido": true,
