--- a/todousado.html
+++ b/todousado.html
@@ -487,7 +487,7 @@
         "precio": "$5.000", "vendido": false, "categoria": 0
         }, {
         "desc": "Juego de mesa Jumanji",
-        "precio": "$8.000", "vendido": false, "categoria": 0
+        "precio": "$8.000", "vendido": true, "categoria": 0
         }, {
         "desc": "Juego de mesa Pit (original en ingles)",
         "precio": "$21.000", "vendido": true, "categoria": 0
@@ -571,7 +571,7 @@
         "precio": "$65.000", "vendido": false, "categoria": 0
         }, {
         "desc": "Juguetes - Set de cubos Rubik",
-        "precio": "$25.000", "vendido": false, "categoria": 0
+        "precio": "$25.000", "vendido": true, "categoria": 0
         }, {
         "desc": "Freezer Peabody Vertical Pe-fv80 90 Litros",
         "precio": "$295.000", "vendido": false, "categoria": 2
@@ -685,7 +685,7 @@
         "precio": "$10.000", "vendido": false, "categoria": 0
         }, {
         "desc": "Set Diarios Secretos Gravity Falls",
-        "precio": "$12.000", "vendido": false, "categoria": 6
+        "precio": "$12.000", "vendido": true, "categoria": 6
         }, {
         "desc": "Juguete Muñeco Caballito con ruedas",
         "precio": "$8.000", "vendido": false, "categoria": 0
@@ -706,7 +706,7 @@
         "precio": "$10.000", "vendido": false, "categoria": 0
         }, {
         "desc": "Juguete Pistola Mini NERF Fortnite Scar",
-        "precio": "$8.000", "vendido": false, "categoria": 0
+        "precio": "$8.000", "vendido": true, "categoria": 0
         }, {
         "desc": "Juguete Pistola NERF Double Dealer + doce balas - funciona bien pero se puede trabar",
         "precio": "$20.000", "vendido": false, "categoria": 0
@@ -1099,7 +1099,7 @@
         "precio": "$18.000", "vendido": true, "categoria": 2
         }, {
         "desc": "Exprimidora Jugos Top House",
-        "precio": "$15.000", "vendido": false, "categoria": 2
+        "precio": "$15.000", "vendido": true, "categoria": 2
         }, {
         "desc": "Libro Guiness World Records 2022",
         "precio": "$10.000", "vendido": false, "categoria": 6
@@ -1233,7 +1233,7 @@
         Lista de productos usados - Pau y Dani
       </h1>
       <p style="font-size: 13px; margin-left: 20px;">
-        Actualizada Version 2 de Marzo 2024
+        Actualizada Version 3 de Marzo 2024
       </p>
       <p>Los productos se reservan solo con transferencia, sino se venden por orden de llegada retirando por el barrio San Andres.</p>
       <p>Revisar periodicamente la lista ya que se borra lo que se vende y se agregan items.</p>
