--- a/changelog.html
+++ b/changelog.html
@@ -190,6 +190,18 @@
       <div class="center">
         <img alt="Time to count logo" src="timetocount.png">
       </div>
+      <h4>1.14.0 Oct 17th, 2024</h4>
+      <ul>
+        <li>Iberia and South Korea games added.</li>
+      </ul>
+      <h4>1.13.7 Jun 17th, 2024</h4>
+      <ul>
+        <li>Europe and USA anniversary editions added.</li>
+      </ul>
+      <h4>1.13.4 March 25th, 2024</h4>
+      <ul>
+        <li>Paris game added.</li>
+      </ul>
       <h4>1.13.0 Nov 2nd, 2023</h4>
       <ul>
         <li>Berlin game added.</li>
