--- a/changelog.html
+++ b/changelog.html
@@ -190,6 +190,10 @@
       <div class="center">
         <img alt="Time to count logo" src="timetocount.png">
       </div>
+      <h4>1.14.3 Nov 22nd, 2024</h4>
+      <ul>
+        <li>Sound bug fixed.</li>
+      </ul>
       <h4>1.14.0 Oct 17th, 2024</h4>
       <ul>
         <li>Iberia and South Korea games added.</li>
