--- a/changelog.html
+++ b/changelog.html
@@ -190,6 +190,10 @@
       <div class="center">
         <img alt="Time to count logo" src="timetocount.png">
       </div>
+      <h4>1.14.5 Nov 25th, 2024</h4>
+      <ul>
+        <li>Fixes for South Korea map</li>
+      </ul>
       <h4>1.14.4 Nov 22nd, 2024</h4>
       <ul>
         <li>Sound bug fixed.</li>
