--- a/wonders7-privacy.html
+++ b/wonders7-privacy.html
@@ -1,13 +1,10 @@
 <head>
-    <link rel="shortcut icon" type="image/x-icon" href="ic_launcher.png">
+    <link rel="shortcut icon" type="image/x-icon" href="wonders7.png">
     <meta http-equiv=Content-Type content="text/html; charset=utf-8">
-    <title>Wonders 7 - Score Assistant for 7 Wonders</title>
+    <title>Wonders 7 - Privacy Policy</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description"
-        content="Wonders 7 is the ultimate 7 Wonders board game score assitant.">
     <meta name="author" content="Daniele Folatelli">
-    <meta name="keywords"
-        content="app, Android App, 7 Wonders, Board, Board Game, Game Setup, Board Setup, Utility, Score Assistant">
+    <meta name="keywords" content="app, 7 wonders, board game">
     <style>
         html,
         body,
@@ -177,7 +174,7 @@
         }
     </style>
 </head>
-<p>Last updated September 2th, 2021</p>
+<p>Last updated February 7th, 2025</p>
 
 <p>Wonders 7 (“we” or “us” or “our”) respects the privacy of our users (“user” or “you”). This Privacy Policy
     explains
