--- a/wonders7-privacy.html
+++ b/wonders7-privacy.html
@@ -1,5 +1,5 @@
 <head>
-    <link rel="shortcut icon" type="image/x-icon" href="wonders7.png">
+    <link rel="shortcut icon" type="image/x-icon" href="7.png">
     <meta http-equiv=Content-Type content="text/html; charset=utf-8">
     <title>Wonders 7 - Privacy Policy</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
