--- a/wonders7.html
+++ b/wonders7.html
@@ -8,7 +8,7 @@
 
     gtag('config', 'G-QNPDJB3STX');
   </script>
-  <link rel="shortcut icon" type="image/x-icon" href="ic_launcher.png">
+  <link rel="shortcut icon" type="image/x-icon" href="7.png">
   <meta http-equiv=Content-Type content="text/html; charset=utf-8">
   <title>Wonders 7 - Score Assistant for 7 Wonders board gam</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
