--- a/wonders7.html
+++ b/wonders7.html
@@ -8,7 +8,7 @@
 
     gtag('config', 'G-QNPDJB3STX');
   </script>
-  <link rel="shortcut icon" type="image/x-icon" href="7.png">
+  <link rel="shortcut icon" type="image/x-icon" href="ic_launcher.png">
   <meta http-equiv=Content-Type content="text/html; charset=utf-8">
   <title>Wonders 7 - Score Assistant for 7 Wonders board gam</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -193,12 +193,32 @@
     <section>
       <h1>Install</h1>
 
-      <p>Install the
-        Wonders 7 app directly from the Google Play Store or Apple App Store!</p>
+      <p>
+        The Wonders 7 app allows you to calculate scores for the 7 Wonders board game. With the app you can input all the information at the end of the game and know who won.
+
+      </p><br>
+
+      <center class="center"><img src="wonders7screen.png" alt="Wonders 7 app screen"></center>
+      <br><br>
+      <p>
+        When you finish a game you will be shown if any records were broken or presonal best scored. Scores are saved, so you can view all the history.
+
+      </p>
+      <br>
+      <center class="center"><img src="wonders7endgame.png" alt="Wonders 7 app screen"></center>
+      <br><br>
+      <p>
+        You can input the scores with just a few clicks. The format is very similar to the scorecard included in the game. But you have different input screens for each score. This is just an example of the science input screen.
+
+      </p>
+      <br>
+      <center class="center"><img src="wonders7detail.png" alt="Wonders 7 app screen detail"></center>
+      <br><br>
+      <p>Install the Wonders 7 app directly from the Google Play Store or Apple App Store!</p>
 
       <center class="center"><a href="https://play.google.com/store/apps/details?id=com.timetocount"><img
             src="google-play-store.png" alt="Download on the Google Play Store"></a></center>
-      <center class="center"><a href="https://apps.apple.com/ar/app/time-to-count-ticket-to-ride/id1584186845?l=en"><img
+      <center class="center"><a href="https://apps.apple.com/ca/app/wonders-7/id6740008207"><img
             src="download_app_store.png" alt="Download on the Apple App Store"></a></center>
     </section>
   <footer class="footer">
