--- a/wonders7.html
+++ b/wonders7.html
@@ -198,21 +198,21 @@
 
       </p><br>
 
-      <center class="center"><img src="wonders7screen.png" alt="Wonders 7 app screen"></center>
+      <center class="center"><img src="wonders7screen.PNG" alt="Wonders 7 app screen"></center>
       <br><br>
       <p>
         When you finish a game you will be shown if any records were broken or presonal best scored. Scores are saved, so you can view all the history.
 
       </p>
       <br>
-      <center class="center"><img src="wonders7endgame.png" alt="Wonders 7 app screen"></center>
+      <center class="center"><img src="wonders7endgame.PNG" alt="Wonders 7 app screen"></center>
       <br><br>
       <p>
         You can input the scores with just a few clicks. The format is very similar to the scorecard included in the game. But you have different input screens for each score. This is just an example of the science input screen.
 
       </p>
       <br>
-      <center class="center"><img src="wonders7detail.png" alt="Wonders 7 app screen detail"></center>
+      <center class="center"><img src="wonders7detail.PNG" alt="Wonders 7 app screen detail"></center>
       <br><br>
       <p>Install the Wonders 7 app directly from the Google Play Store or Apple App Store!</p>
 
