--- a/azul.html
+++ b/azul.html
@@ -8,9 +8,9 @@
 
     gtag('config', 'G-QNPDJB3STX');
   </script>
-  <link rel="shortcut icon" type="image/x-icon" href="ic_launcher.png">
+  <link rel="shortcut icon" type="image/x-icon" href="azul_logo.jpg">
   <meta http-equiv=Content-Type content="text/html; charset=utf-8">
-  <title>Score Assistant for Azul Wonders board game</title>
+  <title>Score Assistant for Azul board game</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description"
     content="This app will help you to count final score in the great Azul board game.">
@@ -191,27 +191,27 @@
   <body lang=en-ES word-wrap:break-word'>
 
     <section>
-      <h1>Install</h1>
+      <h1>Azul Score Tracker Mobile App</h1>
 
       <p>
         The app allows you to calculate scores for the Azul board game. With the app you can input all the information at the end of the game and know who won.
 
       </p><br>
 
-      <center class="center"><img src="wonders7screen.PNG" alt="Wonders 7 app screen"></center>
+      <center class="center"><img src="wonders7screen.PNG" alt="Azul app screen"></center>
       <br><br>
       <p>
         When you finish a game scores are saved, so you can view all the history.
 
       </p>
       <br>
-      <center class="center"><img src="wonders7endgame.PNG" alt="Wonders 7 app screen"></center>
+      <center class="center"><img src="wonders7endgame.PNG" alt="Azul app screen"></center>
       <br><br>
       <p>
         You can input the scores with just a few clicks. With the app you avoid losing the position of scoring pieces, that can happen when you accidentaly touch them while loading new tiles.
       </p>
       <br>
-      <center class="center"><img src="wonders7detail.PNG" alt="Wonders 7 app screen detail"></center>
+      <center class="center"><img src="wonders7detail.PNG" alt="Azul app screen detail"></center>
       <br><br>
       <p>Install the Azul Score Tracker app directly from the Google Play Store or Apple App Store!</p>
 
