--- a/azul.html
+++ b/azul.html
@@ -197,21 +197,23 @@
         The app allows you to calculate scores for the Azul board game. With the app you can input all the information at the end of the game and know who won.
 
       </p><br>
-
-      <center class="center"><img src="wonders7screen.PNG" alt="Azul app screen"></center>
+      <center class="center"><img src="Azul_Main.PNG" alt="Azul app screen"></center>
+      <center class="center"><img src="Azul_Score1.PNG" alt="Azul app screen"></center>
       <br><br>
       <p>
         When you finish a game scores are saved, so you can view all the history.
 
       </p>
       <br>
-      <center class="center"><img src="wonders7endgame.PNG" alt="Azul app screen"></center>
+      <center class="center"><img src="Azul_History.PNG" alt="Azul app screen"></center>
       <br><br>
       <p>
         You can input the scores with just a few clicks. With the app you avoid losing the position of scoring pieces, that can happen when you accidentaly touch them while loading new tiles.
       </p>
       <br>
-      <center class="center"><img src="wonders7detail.PNG" alt="Azul app screen detail"></center>
+      <center class="center"><img src="Azul_Score2.PNG" alt="Azul app screen detail"></center>
+      <center class="center"><img src="Azul_Score3.PNG" alt="Azul app screen detail"></center>
+      <center class="center"><img src="Azul_Score4.PNG" alt="Azul app screen detail"></center>
       <br><br>
       <p>Install the Azul Score Tracker app directly from the Google Play Store or Apple App Store!</p>
 
