--- a/azul.html
+++ b/azul.html
@@ -229,6 +229,7 @@
       have a suggestion, or want to share your thoughts.</p>
     <p>Copyright &copy; 2025 Daniele Folatelli.</p>
     <p>Icons by <a href="https://incons8.com">Icons8</a></p>
+    <p>Starter Image of the Palace of Evora in Portual by <a href="https://commons.wikimedia.org/wiki/File:Portugal_Evora_(451534414).jpg">Francisco Antunes</a>, <a href="https://creativecommons.org/licenses/by/2.0">CC BY 2.0</a>, via Wikimedia Commons</p>
   </footer>
 </div>
 
