--- a/azul.html
+++ b/azul.html
@@ -217,7 +217,7 @@
       <br><br>
       <p>Install the Azul Score Tracker app directly from the Google Play Store or Apple App Store!</p>
 
-      <center class="center"><a href="https://play.google.com/store/apps/details?id=com.timetocount"><img
+      <center class="center"><a href="https://play.google.com/store/apps/details?id=com.azulscore"><img
             src="google-play-store.png" alt="Download on the Google Play Store"></a></center>
       <center class="center"><a href="https://apps.apple.com/ca/app/azul-score-tracker/id6755598421"><img
             src="download_app_store.png" alt="Download on the Apple App Store"></a></center>
