--- a/new.html
+++ b/new.html
@@ -198,8 +198,11 @@
 
       </p><br>
       <center class="center"><img src="azul logo.jog" alt="Azul Score Tracker"></center>
+      <p>Visit the <a href="https://danielefolatelli.github.io/azul.html">Azul Score Rracker website</a>
       <center class="center"><img src="7.png" alt="Wonders 7"></center>
+        <p>Visit the <a href="https://danielefolatelli.github.io/wonders7.html">Wonders 7 website</a>
       <center class="center"><img src="ic_launcher.pnh" alt="Time to Count"></center>
+          <p>Visit the <a href="https://danielefolatelli.github.io/ttc.html">Time to Count website</a>
       <br><br>
   <footer class="footer">
     <p><a href="mailto:daniele.folatelli@gmail.com">Contact me</a> if you have encountered a problem with any of the apps,
