--- a/index.html
+++ b/index.html
@@ -191,17 +191,17 @@
   <body lang=en-ES word-wrap:break-word'>
 
     <section>
-      <h1>My homepage for my score assistant tracking apps</h1>
+      <h1>Homepage for my score assistant tracking apps</h1>
 
       <p>
-        Welcome to my webpage. This is just to let you know I have various apps for different Board Games. I love to play those games and I enjoy a good app that makes scoring easier.
+        Welcome!!! This is just to let you know I have various apps for different Board Games. I love to play those games and I enjoy a good app that makes scoring easier.
 
       </p><br>
-      <center class="center"><img src="azul logo.jog" alt="Azul Score Tracker"></center>
+      <center class="center"><img src="azul logo.jpg" alt="Azul Score Tracker"></center>
       <p>Visit the <a href="https://danielefolatelli.github.io/azul.html">Azul Score Rracker website</a>
       <center class="center"><img src="7.png" alt="Wonders 7"></center>
         <p>Visit the <a href="https://danielefolatelli.github.io/wonders7.html">Wonders 7 website</a>
-      <center class="center"><img src="ic_launcher.pnh" alt="Time to Count"></center>
+      <center class="center"><img src="ic_launcher.png" alt="Time to Count"></center>
           <p>Visit the <a href="https://danielefolatelli.github.io/ttc.html">Time to Count website</a>
       <br><br>
   <footer class="footer">
