--- a/wonders7.html
+++ b/wonders7.html
@@ -191,7 +191,7 @@
   <body lang=en-ES word-wrap:break-word'>
 
     <section>
-      <h1>Install</h1>
+      <h1>Score assistant app for the 7 Wonders board game</h1>
 
       <p>
         The Wonders 7 app allows you to calculate scores for the 7 Wonders board game. With the app you can input all the information at the end of the game and know who won.
