--- a/index.html
+++ b/index.html
@@ -197,12 +197,12 @@
         Welcome!!! This is just to let you know I have various apps for different Board Games. I love to play those games and I enjoy a good app that makes scoring easier.
 
       </p><br>
-      <center class="center"><img src="azul logo.jpg" alt="Azul Score Tracker"></center>
+      <center class="center"><img src="azul logo.jpg" alt="Azul Score Tracker" style="width: 50px; height: 50px;"></center>
       <p>Visit the <a href="https://danielefolatelli.github.io/azul.html">Azul Score Rracker website</a>
       <center class="center"><img src="7.png" alt="Wonders 7"></center>
-        <p>Visit the <a href="https://danielefolatelli.github.io/wonders7.html">Wonders 7 website</a>
+        <p>Visit the <a href="https://danielefolatelli.github.io/wonders7.html" style="width: 50px; height: 50px;">Wonders 7 website</a>
       <center class="center"><img src="ic_launcher.png" alt="Time to Count"></center>
-          <p>Visit the <a href="https://danielefolatelli.github.io/ttc.html">Time to Count website</a>
+          <p>Visit the <a href="https://danielefolatelli.github.io/ttc.html" style="width: 50px; height: 50px;">Time to Count website</a>
       <br><br>
   <footer class="footer">
     <p><a href="mailto:daniele.folatelli@gmail.com">Contact me</a> if you have encountered a problem with any of the apps,
