--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
 
       </p><br>
       <center class="center"><img src="azul logo.jpg" alt="Azul Score Tracker" style="width: 50px; height: 50px;"></center>
-      <p>Visit the <a href="https://danielefolatelli.github.io/azul.html">Azul Score Rracker website</a>
+      <p>Visit the <a href="https://danielefolatelli.github.io/azul.html">Azul Score Trracker website</a>
       <center class="center"><img src="7.png" alt="Wonders 7"></center>
         <p>Visit the <a href="https://danielefolatelli.github.io/wonders7.html" style="width: 50px; height: 50px;">Wonders 7 website</a>
       <center class="center"><img src="ic_launcher.png" alt="Time to Count"></center>
